--- a/templates/ourPractices.html
+++ b/templates/ourPractices.html
@@ -19,7 +19,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
-  <link rel="stylesheet" type="text/css" href="{% static 'css/practices04.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/practices06.css' %}">
   <link href="{% static 'lib/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet"> -->
  <link rel="stylesheet" type="text/css" href="{% static 'lib/bootstrap/css/bootstrap.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'lib/bootstrap/css/bootstrap-responsive.css' %}">
@@ -159,7 +159,16 @@ document.getElementById("sidebar").style.width = "0";
 
           >
           <a href="{%url 'services' %}?buisnessImperative=True">Solutions</a></li>
-          <li><a href="#portfolio">Innovation</a></li>
+          <li
+
+          {% if '/innovation/' == request.path %}
+              class= "nav-item active"
+          {% else %}
+             class= "nav-item "
+          {% endif %}
+
+          >
+          <a href="{%url 'innovation' %}">Innovation</a></li>
 
         </ul>
       </nav>
@@ -240,6 +249,18 @@ document.getElementById("sidebar").style.width = "0";
     </div>
   </div>
 </div>
+
+<section id="architecture" class="clearfix">
+     <div class="container">
+        <div class="intro-info">
+         <h1 class="title">Reference Architecture</h1>
+        </div>
+        <div class="intro-img">
+          <img src="{% static 'images/Architecture.png'  %}"   alt="" class="img-fluid">
+        </div>
+      </div>
+    </section>
+
 
 
    <!-- #intro -->
